--- a/Main.tex
+++ b/Main.tex
@@ -228,6 +228,7 @@
 \newtheorem{mylemma}{Lemma}
 \newtheorem{myproof}{Proof}
 \newtheorem{myexample}{Example}
+\newtheorem{mycorollary}{Corollary}
 
 \newcommand{\dpllrule}[1]{\mathbf{#1}}
 \newcommand{\Conflict}{\dpllrule{Conflict}}
@@ -278,7 +279,7 @@ ${ \ } $ \vspace{4cm}
 \end{center}
 
 \begin{center}
-June, 2014
+22nd July, 2014
 \end{center}
 
 \vspace{2.5cm}
